// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageButton should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled uui-button button-color-primary root mode-solid size-36 color-sky fill-white size-30"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={-1}
  type="button"
/>
`;

exports[`PageButton should be rendered correctly with extra 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable uui-button uui-size-24 button-color-sun root mode-solid size-24 color-sun fill-light size-24"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption line-height-18 font-size-12 v-padding-2"
  >
    1
  </div>
</button>
`;
